--- a/usermanager/pom.xml
+++ b/usermanager/pom.xml
@@ -17,7 +17,7 @@
       <version>4.12</version>
       <scope>test</scope>
     </dependency>
-  <dependency>
+  	<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-core</artifactId>
 			<version>${spring.version}</version>
@@ -93,5 +93,32 @@
   </dependencies>
   <build>
     <finalName>usermanager</finalName>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.19.1</version>
+        <configuration>
+          <systemPropertyVariables>
+            <webdriver.chrome.driver>/Users/stevenwang/Documents/Apps/chromedriver</webdriver.chrome.driver>         
+          </systemPropertyVariables>
+        </configuration>
+      </plugin>
+      
+      <plugin>
+	      <groupId>pl.allegro</groupId>
+	      <artifactId>grunt-maven-plugin</artifactId>
+	      <version>1.4.1</version>
+	      <executions>
+	        <execution>
+	          <phase>frontunittest</phase>
+	          <goals>
+	            <goal>npm</goal>
+	            <goal>grunt</goal>
+	          </goals>
+	        </execution>
+	      </executions>
+	   </plugin>
+    </plugins>
   </build>
 </project>
