--- a/usermanager/package.json
+++ b/usermanager/package.json
@@ -10,6 +10,7 @@
     "karma": "^1.3.0",
     "karma-firefox-launcher": "^1.0.0",
     "karma-jasmine": "^1.1.0",
+    "karma-phantomjs-launcher": "^1.0.2",
     "npm": "^4.0.5"
   }
 }
