--- a/usermanager/sonar-project.properties
+++ b/usermanager/sonar-project.properties
@@ -1,4 +1,4 @@
-onar.projectKey=Citizant.echoweb:usermanager
+sonar.projectKey=Citizant.echoweb:usermanager
 sonar.projectName=usermanager
 sonar.projectVersion=1.0
 sonar.sources=usermanager/src/main/java
