--- a/usermanager/pom.xml
+++ b/usermanager/pom.xml
@@ -110,6 +110,7 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <version>2.19.1</version>
         <configuration>
+          <argLine>${surefireArgLine}</argLine>
           <systemPropertyVariables>
             <webdriver.chrome.driver>/Users/stevenwang/Documents/Apps/chromedriver</webdriver.chrome.driver>         
           </systemPropertyVariables>
@@ -152,15 +153,44 @@
 		  <groupId>org.jacoco</groupId>
 		  <artifactId>jacoco-maven-plugin</artifactId>
 		  <version>0.7.9</version>
-		  <executions>
-	        <execution>
-	          <phase>test</phase>
-	          <goals>
-	            <goal>report</goal>	            
-	          </goals>
-	          
-	        </execution>
-	      </executions>
+		 <executions>
+        <!--
+            Prepares the property pointing to the JaCoCo runtime agent which
+            is passed as VM argument when Maven the Surefire plugin is executed.
+        -->
+        <execution>
+            <id>pre-unit-test</id>
+            <goals>
+                <goal>prepare-agent</goal>
+            </goals>
+            <configuration>
+                <!-- Sets the path to the file which contains the execution data. -->
+                <destFile>${project.build.directory}/coverage-reports/jacoco-ut.exec</destFile>
+                <!--
+                    Sets the name of the property containing the settings
+                    for JaCoCo runtime agent.
+                -->
+                <propertyName>surefireArgLine</propertyName>
+            </configuration>
+        </execution>
+        <!--
+            Ensures that the code coverage report for unit tests is created after
+            unit tests have been run.
+        -->
+        <execution>
+            <id>post-unit-test</id>
+            <phase>test</phase>
+            <goals>
+                <goal>report</goal>
+            </goals>
+            <configuration>
+                <!-- Sets the path to the file which contains the execution data. -->
+                <dataFile>${project.build.directory}/coverage-reports/jacoco-ut.exec</dataFile>
+                <!-- Sets the output directory for the code coverage report. -->
+                <outputDirectory>${project.reporting.outputDirectory}/jacoco-ut</outputDirectory>
+            </configuration>
+        </execution>
+    </executions>
 	   </plugin>
     </plugins>
   </build>
