--- a/usermanager/Dockerfile
+++ b/usermanager/Dockerfile
@@ -1,4 +1,4 @@
 FROM tomcat:8.5-alpine
-MAINTAINER "Rupesh Kumar">
+MAINTAINER "Rupesh Kumar"
 ADD target/usermanager.war /usr/local/tomcat/webapps
 ENTRYPOINT ["/usr/local/tomcat/bin/catalina.sh", "run"]
