--- a/usermanager/pom.xml
+++ b/usermanager/pom.xml
@@ -10,39 +10,7 @@
 	<properties>
 		<java.version>1.8</java.version>
 		<spring.version>3.0.5.RELEASE</spring.version>
-		<tomcat.home>C:/devapps/Apache/tomcat7.0</tomcat.home>
-		<webdriver.chrome.driver>/devapps/chromedriver.exe</webdriver.chrome.driver>
-
-		<!-- The Cargo container type -->
-		<cargo.container.id>tomcat7x</cargo.container.id>
-		<!-- The URL of the Zip file based installer for the container that Cargo 
-			is to deploy -->
-		<cargo.container.url>http://repo.maven.apache.org/maven2/org/apache/tomcat/tomcat/7.0.70/tomcat-7.0.70.zip</cargo.container.url>
-		<!-- The port used by the forked container -->
-		<cargo.container.port>8080</cargo.container.port>
-		<!-- When using Tomcat, the AJP connector listen port -->
-		<cargo.container.tomcat.ajp.port>8009</cargo.container.tomcat.ajp.port>
-		<!-- The RMI port used on the container. For Tomcat, this is the value 
-			of the /Server/@port attribute. -->
-		<cargo.container.rmi.port>8205</cargo.container.rmi.port>
-		<!-- Optional JVM arguments for the forked container that are appended 
-			to any debugging configuration set by cargo.container.jvmargs.debug (See 
-			cargo-debug profile.) -->
-		<cargo.container.jvmargs></cargo.container.jvmargs>
-		<!-- The port to use when the debugger is enabled. -->
-		<cargo.container.debug.port>8000</cargo.container.debug.port>
-		<!-- The suspend setting to use when the debugger is enabled. -->
-		<cargo.container.debug.suspend>n</cargo.container.debug.suspend>
-		<!-- The debug arguments used to enable debugging on the forked JVM. -->
-		<cargo.container.debug.jvmargs>-Xdebug
-			-Xrunjdwp:transport=dt_socket,server=y,suspend=${cargo.container.debug.suspend},address=${cargo.container.debug.port}
-			-Xnoagent -Djava.compiler=NONE</cargo.container.debug.jvmargs>
-		<cargo.container.jvmargs.debug></cargo.container.jvmargs.debug>
-
-		<cargo.deployable.default.groupId>${project.groupId}</cargo.deployable.default.groupId>
-		<cargo.deployable.default.artifactId>${project.artifactId}</cargo.deployable.default.artifactId>
-		<cargo.deployable.default.context>${project.artifactId}</cargo.deployable.default.context>
-
+		<webdriver.chrome.driver>c:/devapps/chromedriver.exe</webdriver.chrome.driver>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -128,32 +96,45 @@
 			<artifactId>selenium-remote-driver</artifactId>
 			<version>3.0.1</version>
 		</dependency>
-
 	</dependencies>
 	<build>
 		<finalName>${project.artifactId}</finalName>
-		<pluginManagement>
-			<plugins>
-				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-failsafe-plugin</artifactId>
-					<version>2.16</version>
-				</plugin>
-				<plugin>
-					<groupId>org.codehaus.cargo</groupId>
-					<artifactId>cargo-maven2-plugin</artifactId>
-					<version>1.6.4</version>
-					<configuration>
-						<configuration>
-							<properties>
-								<cargo.servlet.port>${cargo.container.port}</cargo.servlet.port>
-							</properties>
-						</configuration>
-					</configuration>
-				</plugin>
-			</plugins>
-		</pluginManagement>
 		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-failsafe-plugin</artifactId>
+				<version>2.16</version>
+			</plugin>
+			<plugin>
+				<groupId>org.codehaus.cargo</groupId>
+				<artifactId>cargo-maven2-plugin</artifactId>
+				<version>1.7.0</version>
+				<configuration>
+					<wait>true</wait>
+					<container>
+						<containerId>tomcat9x</containerId>
+						<zipUrlInstaller>
+							<url>https://repo.maven.apache.org/maven2/org/apache/tomcat/tomcat/9.0.29/tomcat-9.0.29.zip</url>
+							<downloadDir>${project.build.directory}</downloadDir>
+							<extractDir>${project.build.directory}</extractDir>
+						</zipUrlInstaller>
+						<timeout>500000</timeout>
+					</container>
+					<configuration>
+						<properties>
+							<!-- cargo.servlet.port default is 8080 but can be reset to avoid 
+								conflicts -->
+							<cargo.servlet.port>8089</cargo.servlet.port>
+							<!-- cargo.rmi.port default is 8205 but can be reset to avoid conflicts -->
+							<cargo.rmi.port>8805</cargo.rmi.port>
+							<!-- cargo.tomcat.ajp.port default is 8009 but can be reset to avoid 
+								conflicts -->
+							<cargo.tomcat.ajp.port>8809</cargo.tomcat.ajp.port>
+							<cargo.logging>low</cargo.logging>
+						</properties>
+					</configuration>
+				</configuration>
+			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
@@ -167,27 +148,22 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.19.1</version>
+				<!-- <version>2.19.1</version> -->
 				<configuration>
 					<skipTests>${skip.surefire.tests}</skipTests>
 					<argLine>${surefireArgLine}</argLine>
-					<systemPropertyVariables>
-						<webdriver.chrome.driver>${webdriver.chrome.driver}</webdriver.chrome.driver>
-					</systemPropertyVariables>
-					<!-- run only the tests that talk to the remote test site -->
-					<excludes>
-						<exclude>**/HomePageRecordedTest.java</exclude>
-						<exclude>**/HomePageTest.java</exclude>
-						<exclude>**/UserServiceTest.java</exclude>
-					</excludes>
+					<!-- run only the unit tests -->
+					<includes>
+						<include>**/*Test.java</include>
+					</includes>
 				</configuration>
 				<executions>
 					<execution>
 						<id>test</id>
+						<phase>test</phase>
 						<goals>
 							<goal>test</goal>
 						</goals>
-						<phase>test</phase>
 						<configuration>
 
 						</configuration>
@@ -199,98 +175,25 @@
 
 	<profiles>
 		<profile>
-			<id>tomcat7Create</id>
+			<id>integration</id>
 			<build>
 				<plugins>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-failsafe-plugin</artifactId>
-						<executions>
-							<execution>
-								<id>perform-it</id>
-								<phase>integration-test</phase>
-								<goals>
-									<goal>integration-test</goal>
-								</goals>
-								<configuration>
-									<systemPropertyVariables>
-										<cargo.servlet.port>${cargo.container.port}</cargo.servlet.port>
-										<webdriver.chrome.driver>${webdriver.chrome.driver}</webdriver.chrome.driver>
-									</systemPropertyVariables>
-									<!-- run all the tests that talk to our test app -->
-									<includes>**/*Test.java</includes>
-									<excludes>
-										<exclude>**/PassionTeaTest.java</exclude>
-									</excludes>
-								</configuration>
-							</execution>
-						</executions>
-					</plugin>
 					<plugin>
 						<groupId>org.codehaus.cargo</groupId>
 						<artifactId>cargo-maven2-plugin</artifactId>
 						<configuration>
-							<container>
-								<containerId>${cargo.container.id}</containerId>
-								<systemProperties>
-									<log4j.config>${project.build.directory}/test-classes/log4j.xml
-									</log4j.config>
-								</systemProperties>
-								<dependencies>
-								</dependencies>
-								<zipUrlInstaller>
-									<url>${cargo.container.url}</url>
-								</zipUrlInstaller>
-								<output>${project.build.directory}/tomcat7/container.log</output>
-								<append>false</append>
-								<log>${project.build.directory}/tomcat7/cargo.log</log>
-							</container>
-							<deployables>
-								<deployable>
-									<groupId>${project.groupId}</groupId>
-									<artifactId>${project.artifactId}</artifactId>
-									<type>war</type>
-									<properties>
-										<context>${project.artifactId}</context>
-									</properties>
-									<pingURL>http://localhost:${cargo.container.port}/usermanager
-									</pingURL>
-									<pingTimeout>200000</pingTimeout>
-								</deployable>
-							</deployables>
-							<configuration>
-								<type>standalone</type>
-								<properties>
-									<!-- update with whatever your remote server info is -->
-									<cargo.servlet.port>${cargo.container.port}</cargo.servlet.port>
-									<cargo.logging>low</cargo.logging>
-									<cargo.jvmargs>-Xmx1024m -Xms1024m</cargo.jvmargs>
-								</properties>
-							</configuration>
+							<wait>false</wait>
 						</configuration>
 						<executions>
 							<execution>
-								<id>start-cargo</id>
+								<id>start-server</id>
 								<phase>pre-integration-test</phase>
 								<goals>
 									<goal>start</goal>
 								</goals>
-								<configuration>
-									<configuration>
-										<properties>
-											<cargo.jvmargs>
-												${cargo.container.jvmargs.debug}
-												${cargo.container.jvmargs}
-											</cargo.jvmargs>
-											<cargo.servlet.port>${cargo.container.port}</cargo.servlet.port>
-											<cargo.tomcat.ajp.port>${cargo.container.tomcat.ajp.port}</cargo.tomcat.ajp.port>
-											<cargo.rmi.port>${cargo.container.rmi.port}</cargo.rmi.port>
-										</properties>
-									</configuration>
-								</configuration>
 							</execution>
 							<execution>
-								<id>stop-cargo</id>
+								<id>stop-server</id>
 								<phase>post-integration-test</phase>
 								<goals>
 									<goal>stop</goal>
@@ -298,94 +201,26 @@
 							</execution>
 						</executions>
 					</plugin>
-				</plugins>
-			</build>
-		</profile>
-		<profile>
-			<id>tomcat7Deploy</id>
-			<build>
-				<plugins>
+					<!-- run tests against app server -->
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-failsafe-plugin</artifactId>
-						<executions>
-							<execution>
-								<id>perform-it</id>
-								<phase>integration-test</phase>
-								<goals>
-									<goal>integration-test</goal>
-								</goals>
-								<configuration>
-									<systemPropertyVariables>
-										<cargo.servlet.port>${cargo.container.port}</cargo.servlet.port>
-										<webdriver.chrome.driver>${webdriver.chrome.driver}</webdriver.chrome.driver>
-									</systemPropertyVariables>
-									<includes>**/*Test.java</includes>
-									<excludes>
-										<exclude>**/PassionTeaTest.java</exclude>
-									</excludes>
-								</configuration>
-							</execution>
-						</executions>
-					</plugin>
-					<plugin>
-						<groupId>org.codehaus.cargo</groupId>
-						<artifactId>cargo-maven2-plugin</artifactId>
 						<configuration>
-							<container>
-								<containerId>${cargo.container.id}</containerId>
-								<type>remote</type>
-								<systemProperties>
-									<log4j.config>${project.build.directory}/test-classes/log4j.xml
-									</log4j.config>
-								</systemProperties>
-								<dependencies>
-								</dependencies>
-								<!-- Instead of downloading the container or deploying remote, you 
-									can also reuse an existing installation by settings its directory: <home>${tomcat.home}</home> -->
-								<output>${tomcat.home}/container.log</output>
-								<append>false</append>
-								<log>${tomcat.home}/cargo.log</log>
-							</container>
-							<configuration>
-								<type>runtime</type>
-								<properties>
-									<!-- update with whatever your remote server info is -->
-									<cargo.tomcat.manager.url>http://localhost:8080/manager</cargo.tomcat.manager.url>
-									<cargo.remote.username>admin</cargo.remote.username>
-									<cargo.remote.password>admin</cargo.remote.password>
-									<cargo.servlet.port>${cargo.container.port}</cargo.servlet.port>
-									<cargo.logging>low</cargo.logging>
-									<cargo.jvmargs>-Xmx1024m -Xms1024m</cargo.jvmargs>
-								</properties>
-							</configuration>
-							<deployables>
-								<deployable>
-									<groupId>${project.groupId}</groupId>
-									<artifactId>${project.artifactId}</artifactId>
-									<type>war</type>
-									<properties>
-										<context>${project.artifactId}</context>
-									</properties>
-									<pingURL>http://localhost:${cargo.container.port}/usermanager
-									</pingURL>
-									<pingTimeout>200000</pingTimeout>
-								</deployable>
-							</deployables>
+							<skipTests>${skip.surefire.tests}</skipTests>
+							<argLine>${surefireArgLine}</argLine>
+							<systemPropertyVariables>
+								<webdriver.chrome.driver>${webdriver.chrome.driver}</webdriver.chrome.driver>
+							</systemPropertyVariables>
+							<includes>
+								<include>**/*IT.java</include>
+							</includes>
 						</configuration>
 						<executions>
 							<execution>
-								<id>deploy-cargo</id>
-								<phase>pre-integration-test</phase>
+								<phase>integration-test</phase>
 								<goals>
-									<goal>deploy</goal>
-								</goals>
-							</execution>
-							<execution>
-								<id>undeploy-cargo</id>
-								<phase>post-integration-test</phase>
-								<goals>
-									<goal>undeploy</goal>
+									<goal>integration-test</goal>
+									<goal>verify</goal>
 								</goals>
 							</execution>
 						</executions>
@@ -400,7 +235,7 @@
 					<plugin>
 						<groupId>pl.allegro</groupId>
 						<artifactId>grunt-maven-plugin</artifactId>
-						<version>1.4.1</version>
+						<version>1.5.1</version>
 						<executions>
 							<execution>
 								<phase>test</phase>
@@ -416,7 +251,7 @@
 					<plugin>
 						<groupId>org.jacoco</groupId>
 						<artifactId>jacoco-maven-plugin</artifactId>
-						<version>0.7.9</version>
+						<version>0.8.6</version>
 						<executions>
 							<!-- Prepares the property pointing to the JaCoCo runtime agent which 
 								is passed as VM argument when Maven the Surefire plugin is executed. -->
